--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
 .App {
   text-align: center;
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  overflow: hidden; /* Это предотвратит прокрутку, если контент превышает высоту экрана */
 }
 
 .App-logo {
@@ -40,14 +44,43 @@
 .section {
   position: relative;
   width: 100%;
-  height: 100vh; /* Высота каждого блока равна высоте экрана */
-  opacity: 0; /* Начальное состояние прозрачности */
-  transform: translateY(20px); /* Сдвиг вниз */
-  transition: opacity 0.5s ease, transform 0.5s ease; /* Плавный переход */
+  height: 100vh;
+  margin: 0;
+  padding: 0;
+  opacity: 0;
+  transform: translateY(20px);
+  transition: opacity 0.5s ease, transform 0.5s ease;
 }
 
 .section.visible {
-  opacity: 1; /* Прозрачность при видимости */
-  transform: translateY(0); /* Восстановление первоначального положения */
+  opacity: 1;
+  transform: translateY(0);
+}
+
+.section.fade-out {
+  opacity: 0;
+  transition: opacity 0.5s ease; /* Переход для исчезновения */
+}
+
+.section.restore {
+  opacity: 1;
+  transition: opacity 0.5s ease; /* Переход для восстановления */
+}
+
+/* Адаптивные стили для мобильных устройств */
+@media (max-width: 768px) {
+  .section {
+    height: 100%; /* Убираем фиксированную высоту, чтобы секции могли занимать меньше места */
+    padding: 20px; /* Добавляем отступы */
+    font-size: 14px; /* Уменьшаем размер шрифта */
+  }
+
+  .App-header {
+    font-size: calc(10px + 1.5vmin); /* Меньший размер заголовка */
+  }
+
+  .App-logo {
+    height: 20vmin; /* Уменьшаем логотип для мобильных устройств */
+  }
 }
 
