feat: Адаптировано для мобильных устройств, добавлена карусель с фотографиями и возможность листать новости, если они не вмещаются на экран полностью

--- a/src/App.css
+++ b/src/App.css
@@ -67,20 +67,12 @@
   transition: opacity 0.5s ease; /* Переход для восстановления */
 }
 
-/* Адаптивные стили для мобильных устройств */
+/* Добавляем медиа-запрос для мобильных устройств */
 @media (max-width: 768px) {
+
   .section {
-    height: 100%; /* Убираем фиксированную высоту, чтобы секции могли занимать меньше места */
-    padding: 20px; /* Добавляем отступы */
-    font-size: 14px; /* Уменьшаем размер шрифта */
-  }
-
-  .App-header {
-    font-size: calc(10px + 1.5vmin); /* Меньший размер заголовка */
-  }
-
-  .App-logo {
-    height: 20vmin; /* Уменьшаем логотип для мобильных устройств */
+    height: 100vh;
+    min-height: 100vh;
+    transition: opacity 0.3s ease, transform 0.3s ease;
   }
 }
-
