--- a/src/components/ScheduleSection.css
+++ b/src/components/ScheduleSection.css
@@ -40,3 +40,16 @@
     font-size: 3rem;
     margin: 8rem 0;
 }
+
+/* Адаптация для мобильных устройств */
+@media (max-width: 768px) {
+    .schedule h2 {
+        font-size: 3.5rem; /* Уменьшаем размер заголовка для мобильных */
+        margin-bottom: 2rem; /* Уменьшаем отступ */
+    }
+
+    .schedule li {
+        font-size: 1.8rem; /* Уменьшаем размер шрифта для пунктов списка на мобильных */
+        margin: 2rem 0; /* Уменьшаем отступы между элементами списка на мобильных */
+    }
+}
