--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -35,3 +35,19 @@
 .hero-content p {
     font-size: 3rem;
 }
+
+/* Адаптация для мобильных устройств */
+@media (max-width: 768px) {
+    .hero {
+        height: 100vh;
+        padding: 20px;
+    }
+
+    .hero-content h1 {
+        font-size: 4rem;
+    }
+
+    .hero-content p {
+        font-size: 1.5rem;
+    }
+}
