feat: Полностью адаптировано для мобильных устройств, добавлено всплывающее меню для мобильных устройств и исправлены баги.

--- a/src/App.css
+++ b/src/App.css
@@ -3,12 +3,8 @@
   margin: 0;
   padding: 0;
   height: 100%;
-  /overflow: hidden; /* Это предотвратит прокрутку, если контент превышает высоту экрана */
+  overflow: hidden; /* Это предотвратит прокрутку, если контент превышает высоту экрана */
   /overflow-y: auto; /* Разрешает прокрутку колесиком внутри приложения */
-}
-body, html {
-  /overflow-y: hidden; /* Скрывает вертикальную полосу прокрутки */
-  /overflow-x: hidden; /* Дополнительно скрывает горизонтальную полосу прокрутки */
 }
 
 .App-logo {
